--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,14 @@ services:
       - 80:80
     depends_on: 
       - mysql
-    environment: 
-      MYSQL_HOST: mysql
-      MYSQL_USER: db_user
-      MYSQL_PASSWORD: db_password
-      MYSQL_DATABASE: db_databasename
+    env_file:
+      - ./env/environment.env
     volumes:
     - ./app:/var/www/html
 
   mysql:
     image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: db_user
-      MYSQL_PASSWORD: db_password
-      MYSQL_DATABASE: db_databasename
+    env_file:
+      - ./env/environment.env
     volumes:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql  
